# cad2cav_onboard

./: .gitignore  README.md
cv_bridge/: CMakeLists.txt
cv_bridge/src/: CMakeLists.txt
object_detection/: CMakeLists.txt  package.xml
object_detection/include/object_detection/: apriltag.hpp  apriltag_detector.hpp  fps.hpp  landmark_processor.hpp  object_detector.hpp  video_loader.hpp
object_detection/launch/: apriltag_detection_playback.launch  image_subscribe_playback.launch  object_detection_playback.launch  save_video.launch
object_detection/node/: apriltag_detection_node.cpp  camera_calibration_node.cpp  image_publish_node.cpp  object_detection_node.cpp  video_recording_node.cpp  video_save_node.cpp
object_detection/params/camera/: params.xml
object_detection/src/: apriltag_detector.cpp  fps.cpp  landmark_processor.cpp  object_detector.cpp  video_loader.cpp
object_detection/test/: apriltag_detector_test.cpp  object_detection_test.cpp
scripts/: Install_OpenCV-4-5-1.sh
